Update and rename profile.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="profile.css">
     <link href="fabicon.png" rel="icon">
-    <title>Bishuddhota - Profile</title>
+    <title>Profile</title>
     <title>Document</title>
 </head>
 <body>
@@ -56,6 +56,6 @@
             </span>
         </button>
     </div> 
-    
+    <p>Created By Mahfuzul Haque</p>
 </body>
 </html>
